--- a/azure/terraform.tfvars.example
+++ b/azure/terraform.tfvars.example
@@ -1,11 +1,10 @@
 resource_group_name = "qualys-registry-sensor-rg"
 location            = "eastus"
 
-cluster_name       = "qualys-registry-cluster"
-kubernetes_version = "1.28"
+cluster_name = "qualys-registry-cluster"
 
 node_count   = 2
-node_vm_size = "Standard_D2s_v3"
+node_vm_size = "Standard_B2s"
 
 create_acr = true
 acr_name   = ""
