--- a/kubernetes/qualys-daemonset.yaml
+++ b/kubernetes/qualys-daemonset.yaml
@@ -42,7 +42,11 @@ spec:
       protocol: TCP
   - to:
     - ipBlock:
-        cidr: 0.0.0.0/0
+        cidr: 10.0.0.0/8
+    - ipBlock:
+        cidr: 172.16.0.0/12
+    - ipBlock:
+        cidr: 192.168.0.0/16
     ports:
     - port: 443
       protocol: TCP
